--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -187,7 +187,7 @@ body{
     @apply flex justify-start items-center;
   }
   .card-wrapper {
-    @apply bg-light-900 dark:dark-gradient shadow-light-100 dar;
+    @apply bg-light-900 dark:dark-gradient shadow-light-100 dark:shadow-dark-100;
   }
   .btn {
     @apply bg-light-800 dark:bg-dark-300 !important;
@@ -298,6 +298,7 @@ code {
   /* Hide scrollbar for Chrome, Safari and Opera */
   .no-scrollbar::-webkit-scrollbar {
     display: none;
+    
   }
   /* Hide scrollbar for IE, Edge and Firefox */
   .no-scrollbar {
