--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,25 +3,25 @@
 @tailwind utilities;
 
 :root {
-  --primary100: #FFF1E6;
-  --primary500: #FF7000;
+  --primary100: #fff1e6;
+  --primary500: #ff7000;
 
   --dark100: #000000;
-  --dark200: #0F1117;
+  --dark200: #0f1117;
   --dark300: #151821;
   --dark400: #212734;
   --dark500: #101012;
 
-  --light400: #858EAD;
-  --light500: #7B8EC8;
-  --light700: #DCE3F1;
-  --light800: #F4F6F8;
-  --light850: #FDFDFD;
-  --light900: #FFFFFF;
+  --light400: #858ead;
+  --light500: #7b8ec8;
+  --light700: #dce3f1;
+  --light800: #f4f6f8;
+  --light850: #fdfdfd;
+  --light900: #ffffff;
 }
 
-body{
-  font-family: "Inter",sans-serif;
+body {
+  font-family: "Inter", sans-serif;
 }
 
 /* @layer utilities {
@@ -261,7 +261,6 @@ body{
 }
 .markdown a,
 code {
-  
   overflow-wrap: break-word;
   word-wrap: break-word;
   -ms-word-break: break-all;
@@ -298,11 +297,109 @@ code {
   /* Hide scrollbar for Chrome, Safari and Opera */
   .no-scrollbar::-webkit-scrollbar {
     display: none;
-    
   }
   /* Hide scrollbar for IE, Edge and Firefox */
   .no-scrollbar {
-    -ms-overflow-style: none; 
-    scrollbar-width: none; 
+    -ms-overflow-style: none;
+    scrollbar-width: none;
   }
+}
+
+code[class*="language-"],
+pre[class*="language-"] {
+  color: #d6e7ff;
+  background: #030314;
+  text-shadow: none;
+  font-family: "Fira Code", "Fira Mono", Menlo, Consolas, monospace;
+  font-size: 1em;
+  line-height: 1.5;
+  letter-spacing: 0.2px;
+  white-space: pre;
+  word-spacing: normal;
+  word-break: normal;
+  word-wrap: normal;
+  text-align: left;
+  -moz-tab-size: 4;
+  -o-tab-size: 4;
+  tab-size: 4;
+  -webkit-hyphens: none;
+  -moz-hyphens: none;
+  -ms-hyphens: none;
+  hyphens: none;
+}
+pre[class*="language-"]::-moz-selection,
+pre[class*="language-"] ::-moz-selection,
+code[class*="language-"]::-moz-selection,
+code[class*="language-"] ::-moz-selection,
+pre[class*="language-"]::selection,
+pre[class*="language-"] ::selection,
+code[class*="language-"]::selection,
+code[class*="language-"] ::selection {
+  color: inherit;
+  background: #1d3b54;
+  text-shadow: none;
+}
+pre[class*="language-"] {
+  border: 1px solid #2a4555;
+  border-radius: 5px;
+  padding: 1.5em 1em;
+  margin: 1em 0;
+  overflow: auto;
+}
+:not(pre) > code[class*="language-"] {
+  color: #f0f6f6;
+  background: #2a4555;
+  padding: 0.2em 0.3em;
+  border-radius: 0.2em;
+  box-decoration-break: clone;
+}
+.token.comment,
+.token.prolog,
+.token.doctype,
+.token.cdata {
+  color: #446e69;
+}
+.token.punctuation {
+  color: #d6b007;
+}
+.token.property,
+.token.tag,
+.token.boolean,
+.token.number,
+.token.constant,
+.token.symbol,
+.token.deleted {
+  color: #d6e7ff;
+}
+.token.selector,
+.token.attr-name,
+.token.builtin,
+.token.inserted {
+  color: #e60067;
+}
+.token.string,
+.token.char {
+  color: #49c6ec;
+}
+.token.operator,
+.token.entity,
+.token.url,
+.language-css .token.string,
+.style .token.string {
+  color: #ec8e01;
+  background: transparent;
+}
+.token.atrule,
+.token.attr-value,
+.token.keyword {
+  color: #0fe468;
+}
+.token.function,
+.token.class-name {
+  color: #78f3e9;
+}
+.token.regex,
+.token.important,
+.token.variable {
+  color: #d6e7ff;
 }
